# menu_tester

./: pyproject.toml
menu_tester/: navigation.py  plugin.py  urls.py  views.py
src/menu_tester/: plugin.py
